fixed testimonial image issue on iphone?

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -271,6 +271,7 @@ img {
 
       img {
         height: 50px;
+        width: 50px;
         border-radius: 50%;
         margin-right: 0.5rem;
       }
